2001-05-04  Neil Jerram  <neil@ossau.uklinux.net>

	* eval.c (scm_promise_p), list.c (scm_append_x, scm_reverse_x),
	symbols.c (scm_symbol_to_string), vports.c (scm_make_soft_port):
	Change R4RS references to R5RS.

	* guile-snarf.awk.in: Fixes so that (i) blank lines in the
	docstring source are correctly reproduced in the output (ii)
	we don't anymore get occasional trailing quotes.  Also reorganized
	and commented the code a little.

	* scmsigs.c (scm_raise), throw.c (scm_throw): Docstring format
	fixes.

2001-05-04  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* strop.c (scm_string_split): New procedure.

	* strop.h (scm_string_split): Added prototype.

2001-05-04  Gary Houston  <ghouston@arglist.com>

	* socket.c: define uint32_t if netdb.h doesn't.  thanks to
	Dale P. Smith.

2001-05-02  Marius Vollmer  <mvo@zagadka.ping.de>

	* rw.c: Include "modules.h" and "strports.h".

	* net_db.h (scm_gethost): Added prototype.

	* deprecation.h, deprecation.c: New.
	* Makefile.am (libguile_la_SOURCES): Added "deprecation.c".
	(DOT_X_FILES): Added "deprecation.x".
	(modinclude_HEADERS): Added "deprecation.h".

	* init.c: Include "deprecation.h".
	(scm_init_guile_1): Call scm_init_deprecation.
	
2001-05-01  Marius Vollmer  <mvo@zagadka.ping.de>

	* gh.h (gh_init_guile, gh_make_string, gh_string_length,
	gh_string_ref, gh_string_set_x, gh_substring, gh_string_append):
	New.

2001-04-29  Gary Houston  <ghouston@arglist.com>

	* rw.c: new file, implementing C part of module (ice-9 rw).
	(scm_read_string_x_partial): moved from ioext.c
	(scm_init_rw): new proc.
	* rw.h: new file.
	init.c: include rw.h and call scm_init_rw.
	Makefile.am: include rw.c and rw.h.

2001-04-28  Rob Browning  <rlb@cs.utexas.edu>

	* numbers.c: enabled local definition of SCM_FLOBUFLEN until we
	know what's supposed to happen to it.

	* list.h (scm_list_star): deprecation expired - removed.

	* numbers.h (scm_dblproc): deprecation expired - removed.